@@ -795,7 +795,13 @@ $.extend($.validator, {
 		var $element = $(element);
 
 		for (var method in $.validator.methods) {
-			var value = $element.attr(method);
+			var value;
+			// If .prop exists (jQuery >= 1.6), use it to get true/false for required
+			if (method === 'required' && typeof $.fn.prop === 'function') {
+				value = $element.prop(method);
+			} else {
+				value = $element.attr(method);
+			}
 			if (value) {
 				rules[method] = value;
 			} else if ($element[0].getAttribute("type") === method) {
