@@ -14,6 +14,7 @@
 * Fixed #71 - improve existing time method and add time12h method for 12h am/pm time format
 * Fixed #177 - Fix validation of a single radio or checkbox input
 * Fixed #189 - :hidden elements are now ignored by default
+* Fixed #194 - Required as attribute fails if jQuery>=1.6 - Use .prop instead of .attr
 
 1.8.1
 ---
